# mlx-guided-grpo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICK_START_TYPE_SYSTEM.md  README.md  TYPE_SYSTEM.md  pyproject.toml  test_type_system.sh  train.sh
.github/: FUNDING.yml  REPO_SETTINGS.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: cli.md
evals/: eval__Users_adeelahmad_.cache_lm-studio_models_lmstudio-community_Qwen-4B-Thinking-2507.zzz_0.4.10_05_gsm8k  eval__Users_adeelahmad_.cache_lm-studio_models_lmstudio-community_Qwen-4B-Thinking-2507.zzz_0.4.10_05_mmlu  eval__Users_adeelahmad_.cache_lm-studio_models_lmstudio-community_Qwen-4B-Thinking-2507_0.4.10_05_gsm8k
examples/: complete_type_example.py  demo_auto_discovery.py  demo_type_system.py  sample_data.jsonl  tool_calling_training.md  train_basic.sh  train_curriculum.sh
mlx_grpo/: __main__.py  scaffold.py  synthetic_prompts.py  train.py  utils.py  visuals.py
mlx_grpo/trainer/: __init__.py  base.py  cross_sampling.py  dataset_cache.py  datasets.py  exam_reward.py  grpo_reward_functions.py  grpo_trainer.py  remote_rollout.py  rollout_logger.py  tool_calling_dataset.py  tool_calling_reward.py  training_monitor.py
mlx_grpo/trainer/grpo/: __init__.py  checkpoint.py  config.py  corruption.py  curriculum.py  debug.py  generation.py  gradients.py  layers.py  loss.py
mlx_grpo/trainer/hierarchical_rewards_v3/: README.md  __init__.py
mlx_grpo/trainer/hierarchical_rewards_v3/core/: __init__.py  base.py  config.py  registry.py
mlx_grpo/trainer/hierarchical_rewards_v3/examples/: grpo_integration.py
mlx_grpo/trainer/rewards/: __init__.py  registry.py
mlx_grpo/trainer/type_system/: __init__.py  auto_discovery.py  auto_discovery_extended.py  cli_integration.py  dataset_loader.py  handlers.py  registry.py
mlx_grpo/trainer/type_system_v2/: __init__.py  bridge.py  coordinator.py  events.py  meta.py
scripts/: audit_tool_calling_data.py  convert_to_hermes_format.py  convert_v14_to_qwen_tools.py
tests/: test_balanced_shuffle.py  test_tool_calling_rewards.py  test_type_system_v2.py
(+46 files in other folders)
